test/part2/success/typage_struct1-4.c


struct test{
	struct test *x;
};

int main(){


}
