test/part2/fail/not_a_struct.c
struct a {
	int a;
};

int main () {

	int i;

	i.x;

}
